--- a/client/views/common/head.html
+++ b/client/views/common/head.html
@@ -1,6 +1,13 @@
 <head>
     <base href="/">
-    <title>ThangTheMan Meteor</title>
+    <title>ThangRental</title>
     <link rel="shortcut icon" href="img/heart.png">
+    <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/navscroll.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<!-- Mobile Devices Viewport Resset-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes">
 
 </head>
