--- a/client/views/home.ng.html
+++ b/client/views/home.ng.html
@@ -1,1 +1,57 @@
-Main Home Content Goes Here
+<body>
+<!--  Jumbotron video -->
+  <div id="index-video" class="hidden-xs">
+        <div class="index-video-container">
+            <div class="videocaption">
+                <h2>Rental Property Management</h2>
+                <h4>Free For Life! We Guaranteed It!</h4>
+                <p><a class="btn btn-slide" href="/">Find out more</a>
+                </p>
+            </div>
+            <video autoplay loop muted>
+                <source src="video/148717512.mp4" type="video/mp4">
+                <source src="video/148717512.webm" type="video/webm">
+                <source src="video/148717512.ogv" type="video/ogg">
+            </video>
+        </div>
+    </div>
+
+    <!-- info section -->
+    <section class="features">
+        <div class="row">
+            <div class="col-sm-12">
+                <h2>We guarantee our commitment to quality</h2>
+                <span>This is where the latest web technology, meet the standard for bookeeping accounting to save you time and money!</span>
+            </div>
+        </div>
+
+        <div class="row home-space">
+
+
+            <div class="col-sm-4">
+                <div class="feature wow zoomIn" data-wow-delay="0.2s">
+                    <img src="img/accountant.png" alt="" />
+                    <h4>Accounting</h4>
+                    <p>Financial tools that help landlords maximize cash flow and monitoring real-time financial data  on their rental property investments. </p>
+                </div>
+            </div>
+
+            <div class="col-sm-4">
+                <div class="feature wow zoomIn" data-wow-delay="0.4s">
+                    <img src="img/key.png" alt="" />
+                    <h4>Security</h4>
+                    <p>Your data are secured and guarded by ninjas...we are not selling any information to third party.</p>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="feature wow zoomIn" data-wow-delay="0.6s">
+                    <img src="img/rocket.png" alt="" />
+                    <h4>Save Time!</h4>
+                    <p>Eliminate the needs for bookkeeping and paying a bookkeeper...Save you time and money so you can have more time doing whatever you want.</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+</body>
