--- a/client/views/common/footer.html
+++ b/client/views/common/footer.html
@@ -1,5 +1,5 @@
 <template name="footer">
-    <footer class="footer" style="position: absolute; bottom: 0; width: 100%;height: 60px">
+    <footer class="footer" style="position: fixed absolute; bottom: 0; width: 100%;height: 60px">
         <div class="container">
             <p class="text-muted">Copyrights ThangTheMan 2015</p>
         </div>
